--- a/src/app/Pages/auctions-page/auctions-page.component.html
+++ b/src/app/Pages/auctions-page/auctions-page.component.html
@@ -1,1 +1,16 @@
-<p>auctions-page works!</p>
+<div class="row">
+  <app-categories class="col-3"></app-categories>
+  <div class="container col-9">
+    <div class="row">
+      <div *ngFor="let auction of auctionsService.auctions" class="card m-sm-4 m-xl-3 m-lg-4" style="width: 18rem; ">
+        <img style="margin-top: 3px;width: 265px;size: auto " src="https://smilyhomes.com/wp-content/uploads/2022/05/house.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a routerLink="auctionpage" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
