--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,44 @@
-<header class="p-3 bg-dark text-white py-2 ">
-  <div class="container">
+<header class="p-5 bg-dark text-white sticky-top py-2">
+  <div>
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start ">
       <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img class="bi me-2" width="139" height="50"  style="margin-left: -80px;" role="img" src="assets/headauction.jpg" >
+        <img class="bi me-2" width="139" height="50" style="margin-left:10px" role="img" src="assets/headauction.jpg">
       </a>
       <ul class=" nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 justify-content-between">
-        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-        <li ><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+        <li style="margin-left: 125px;"><a href="#" routerLink="/home" class="text-primary hovereffect nav-link px-2 text-secondary">Home</a></li>
+        <li style="margin-left: 100px"><a href="#" routerLink="/auctions" class="hovereffect nav-link px-2 text-white" [class.active]="kadir=='kadirkuzu'">See Auctions</a></li>
+        <li style="margin-left: 100px"><a href="#" routerLink="/add-auctions" class="hovereffect nav-link px-2 text-white">Add Auctions</a></li>
+        <li style="margin-left: 100px">
+          <button class="focuseffect py-2 d-none d-md-inline-block nav-link dropdown-toggle btn btn-light  "id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="text-decoration: auto;color: white;background-color: rgb(33,37,41);border:0px">Categories</button>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/home" >1</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/home">2</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/">3</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/">4</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/">5</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/">6</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/">7</a></li>
+            <li><a class="dropdown-item hovereffectblack" routerLink="/">8</a></li>
+          </ul>
+        </li>
       </ul>
 
       <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control form-control-dark text-white bg-dark" placeholder="Search..." aria-label="Search">
+        <input type="search" class="form-control form-control-dark text-white bg-dark" placeholder="Search..."
+               aria-label="Search">
       </form>
 
-      <div class="text-end">
-        <button type="button" class="btn btn-outline-light me-2">Login</button>
-        <button style="background-color: green;border-color:forestgreen;" type="button" class="btn btn-warning">Sign-up</button>
+      <div *ngIf="kadir=='kadirkuzu'" class="text-end">
+        <button routerLink="/login" type="button" class="btn btn-outline-light me-2">Login</button>
+        <button routerLink="/sign-up" style="color: black" type="button" class="btn btn-success">Sign-up</button>
+      </div>
+
+      <div *ngIf="kadir=='kadirkuzuu'" class="text-end">
+        <button type="button" routerLink="/userpage" class="btn btn-outline-light me-2">My-Page</button>
+        <button style="color: black" type="button" class="btn btn-danger">Log-out</button>
       </div>
     </div>
   </div>
 </header>
-<router-outlet></router-outlet>
+<router-outlet *ngIf="!loading"></router-outlet>
