--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -3,11 +3,11 @@
     <div class="modal-content rounded-5 shadow">
       <div class="modal-header p-5 pb-4 border-bottom-0">
         <h2 class="fw-bold mb-0">Login</h2>
-        <button routerLink="/anasayfa" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button routerLink="/home" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
       <div class="modal-body p-5 pt-0">
-        <form autocomplete="off" [formGroup]="form">
+        <form autocomplete="off" [formGroup]="form" (ngSubmit)="login()">
           <div class="form-floating mb-3">
             <input formControlName="userName" type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com" autofocus>
             <label for="floatingInput">Email or username</label>
