--- a/src/app/Pages/the-auction-page/the-auction-page.component.html
+++ b/src/app/Pages/the-auction-page/the-auction-page.component.html
@@ -1,1 +1,42 @@
-<p>the-auction-page works!</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2">
+      <h2>About Seller</h2>
+    </div>
+    <div class="col-8">
+      <h1 style="text-align: center">Product Details</h1>
+      <div style="width: 400px;size: auto;display: block;margin-left: auto;margin-right: auto">
+        <div id="carouselExampleControls" class="carousel slide"
+             data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/house.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/house.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/house.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                  data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                  data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
+    </div>
+    <div class="col-2">
+
+      <h1>Offers</h1>
+
+    </div>
+  </div>
+</div>
