--- a/src/app/Pages/user-page/user-page.component.html
+++ b/src/app/Pages/user-page/user-page.component.html
@@ -1,1 +1,30 @@
-<p>user-page works!</p>
+<div *ngIf="user" style="margin:auto;margin-top: 20px" class="profile">
+  <figure>
+    <img src="https://www.webtekno.com/images/editor/default/0001/81/271b726e387060a6438584b06ce941920c1e415f.jpeg" alt="" />
+  </figure>
+  <header >
+    <h1>{{user.name+" "+user.secondName}}<br>
+      <small>{{user.userName}}</small></h1>
+  </header>
+
+  <div class="toggle">
+    <input type="checkbox" class="view_details" id="view_details">
+    <label for="view_details" title="tap here to view full profile">☰</label>
+  </div>
+  <main>
+    <dl>
+      <dt>Name</dt>
+      <dd>{{user.name}}</dd>
+      <dt>SecondName</dt>
+      <dd>{{user.secondName}}</dd>
+      <dt>E-mail adress</dt>
+      <dd>{{user.emailAdress}}</dd>
+      <dt>Social</dt>
+      <dd>
+        <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+        <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+      </dd>
+    </dl>
+  </main>
+
+</div>
