--- a/src/app/Pages/sign-up/sign-up.component.html
+++ b/src/app/Pages/sign-up/sign-up.component.html
@@ -1,37 +1,52 @@
-<div class="modal modal-signin position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin"
-     style="height: 100%">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content rounded-5 shadow">
-      <div class="modal-header p-5 pb-4 border-bottom-0">
-        <h2 class="fw-bold mb-0">Kayıt Olun</h2>
-        <button type="button" class="btn-close" routerLink="/home" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
+<div *ngIf="!accountService.loggedIn;else:hata">
+  <div class="modal modal-signin position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin"
+       style="height: 100%">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-5 shadow">
+        <div class="modal-header p-5 pb-4 border-bottom-0">
+          <h2 class="fw-bold mb-0">Kayıt Olun</h2>
+          <button type="button" class="btn-close" routerLink="/home" data-bs-dismiss="modal"
+                  aria-label="Close"></button>
+        </div>
 
-      <div class="modal-body p-5 pt-0">
-        <form autocomplete="off" [formGroup]="form">
-          <div class="form-floating mb-3">
-            <input formControlName="emailAdress" type="email" class="form-control rounded-4" id="yeniKullaniciGmail" placeholder="name@example.com" pattern='[^ @]*@[^ @]*' autofocus>
-            <label for="yeniKullaniciGmail">Lütfen gmail adresinizi girin</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input formControlName="name" type="email" class="form-control rounded-4" id="yeniKullaniciAd" placeholder="kullanicinin adi">
-            <label for="yeniKullaniciAd">Adınız</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input formControlName="secondName" type="email" class="form-control rounded-4" id="yeniKullaniciSoyad" placeholder="kullanicinin soyadi">
-            <label for="yeniKullaniciSoyad">Soyadınız</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input formControlName="userName" class="form-control rounded-4" id="yeniKullaniciKullaniciAdi" placeholder="kullanici adi">
-            <label for="yeniKullaniciKullaniciAdi">Kullanmak istediğiniz kullanıcı adı</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input formControlName="password" type="password" class="form-control rounded-4" id="yeniKullaniciSifre" placeholder="Password">
-            <label for="yeniKullaniciSifre">Yeni şifre</label>
-          </div>
-          <button [disabled]="form.invalid" (click)="signUp()" class="w-100 mb-2 btn btn-lg rounded-4 btn-success" type="submit">Kayıt ol</button>
-        </form>
+        <div class="modal-body p-5 pt-0">
+          <form autocomplete="off" [formGroup]="form">
+            <div class="form-floating mb-3">
+              <input formControlName="emailAdress" type="email" class="form-control rounded-4" id="yeniKullaniciGmail"
+                     placeholder="name@example.com" pattern='[^ @]*@[^ @]*' autofocus>
+              <label for="yeniKullaniciGmail">Lütfen gmail adresinizi girin</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input formControlName="name" type="email" class="form-control rounded-4" id="yeniKullaniciAd"
+                     placeholder="kullanicinin adi">
+              <label for="yeniKullaniciAd">Adınız</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input formControlName="secondName" type="email" class="form-control rounded-4" id="yeniKullaniciSoyad"
+                     placeholder="kullanicinin soyadi">
+              <label for="yeniKullaniciSoyad">Soyadınız</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input formControlName="userName" class="form-control rounded-4" id="yeniKullaniciKullaniciAdi"
+                     placeholder="kullanici adi">
+              <label for="yeniKullaniciKullaniciAdi">Kullanmak istediğiniz kullanıcı adı</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input formControlName="password" type="password" class="form-control rounded-4" id="yeniKullaniciSifre"
+                     placeholder="Password">
+              <label for="yeniKullaniciSifre">Yeni şifre</label>
+            </div>
+            <button [disabled]="form.invalid" (click)="signUp()" class="w-100 mb-2 btn btn-lg rounded-4 btn-success"
+                    type="submit">Kayıt ol
+            </button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<ng-template #hata>
+  <div class="alert alert-danger" role="alert">
+    Something went wrong
+  </div>
+</ng-template>
