--- a/src/app/Pages/add-auctions/add-ad.component.html
+++ b/src/app/Pages/add-auctions/add-ad.component.html
@@ -1,1 +1,76 @@
-<p>add-ad works!</p>
+<div class="signup">
+  <div class="modal modal-signin position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin" style="height: 100%">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-5 shadow">
+        <div class="modal-header p-5 pb-4 border-bottom-0">
+          <h2 class="fw-bold mb-0">Add New Auction</h2>
+          <button type="button" class="btn-close" routerLink="/home" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <div class="modal-body p-5 pt-0">
+          <form autocomplete="off" [formGroup]="form" >
+
+            <div class="form-floating mb-3">
+              <input formControlName="name" class="form-control rounded-4" id="newAuctionName" placeholder="newAuctionName" pattern='[^ @]*@[^ @]*' autofocus>
+              <label for="newAuctionName">Please write name of product</label>
+            </div>
+
+            <div class="form-floating mb-3">
+              <input formControlName="price" type="number" class="form-control rounded-4" id="price" placeholder="FirstPrice">
+              <label for="price">Write First Price</label>
+            </div>
+
+            <div class="form-floating mb-3">
+              <input formControlName="buyNowPrice" type="number" class="form-control rounded-4" id="buyNowPrice" placeholder="buyNowPrice">
+              <label for="buyNowPrice">Write buy now price</label>
+            </div>
+
+            <div class="mb-3">
+              <select formControlName="type" id="type" class="form-select" aria-label="Default select example" (click)="findProducts()" >
+                <option selected >Select type of product</option>
+                <option (click)="auctionService.findProductsOfType('electronic')" value="Electronic">Electronic</option>
+                <option (click)="auctionService.findProductsOfType('vehicles')" value="Vehicles">Vehicles</option>
+                <option (click)="auctionService.findProductsOfType('realstate')" value="Realestate">Realestate</option>
+              </select>
+            </div>
+
+            <div class="mb-3">
+              <select formControlName="product" id="product" class="form-select" aria-label="Default select example">
+                <option selected>Select product type of auction</option>
+                <option *ngFor="let product of products">{{product.name}}</option>
+              </select>
+            </div>
+
+
+            <div class="mb-3" style="width: 300px">
+              <label for="imgFirst" class="form-label"><h5>Upload photo for home page</h5></label>
+              <input formControlName="imgFirst" class="form-control" type="file" id="imgFirst">
+            </div>
+
+
+            <div class="mb-3">
+              <label for="allImages" class="form-label"><h5>Upload all photos(Max 10)</h5></label>
+              <input formControlName="allImages" class="form-control" type="file" id="AllImages" multiple >
+            </div>
+
+
+            <div class="mb-3">
+              <label for="startTime" class="form-label"><h5>Select auction's start time</h5></label>
+              <input formControlName="startTime"class="form-control" type="time" id="startTime" >
+            </div>
+
+            <div class="mb-3">
+              <label for="finishTime" class="form-label"><h5>Select auction's and time</h5></label>
+              <input formControlName="finishTime" class="form-control" type="time" id="finishTime" >
+            </div>
+
+
+
+
+            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-success" type="submit">Add Auction</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
