--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="!accountService.loggedIn ;else:hata">
+<body>
+<div *ngIf="!accountService.loggedIn ;else:hata" class="login">
   <div class="modal modal-signin position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin"
        style="height: 100%;">
     <div class="modal-dialog" role="document">
@@ -29,7 +30,8 @@
               <svg class="bi me-1" width="16" height="16"></svg>
               Sign-up
             </button>
-            <button (click)="accountService.try()" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="button">
+            <button (click)="accountService.try()" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4"
+                    type="button">
               <svg class="bi me-1" width="16" height="16">
                 <use xlink:href="#facebook"/>
               </svg>
@@ -46,3 +48,4 @@
     Something went wrong
   </div>
 </ng-template>
+</body>
