--- a/src/app/Pages/the-auction-page/the-auction-page.component.html
+++ b/src/app/Pages/the-auction-page/the-auction-page.component.html
@@ -3,7 +3,7 @@
     <div class="col-2">
       <h2>About Seller</h2>
     </div>
-    <div class="col-8">
+    <div class="col-7">
       <h1 style="text-align: center">Product Details</h1>
       <div style="width: 400px;size: auto;display: block;margin-left: auto;margin-right: auto">
         <div id="carouselExampleControls" class="carousel slide"
@@ -31,12 +31,26 @@
           </button>
         </div>
       </div>
-
     </div>
-    <div class="col-2">
+    <div class="col-3">
 
       <h1>Offers</h1>
-
+      <div style="width: 400px;margin-left: -50px">
+        <div *ngIf="accountService.loggedIn;else:GoLogin" class="input-group mb-3"
+        >
+          <input autocomplete="off" type="text" class="form-control" id="offerInput" placeholder="Write your offer"
+                 aria-describedby="button-addon2">
+          <button class="btn btn-outline-dark" type="button" id="AddOfferButton" (click)="addOffer()">Give Offer
+          </button>
+        </div>
+        <ng-template #GoLogin class="-align-right" >
+          Do you want to give orders? Let
+          <button class="btn btn-success" routerLink="/login">Login</button>
+        </ng-template>
+      </div>
+      <div class="animate__animated  animate__backInRight alert alert-dark " role="alert" style="margin-top: 15px" *ngFor="let offers of theOffersMade">
+        {{offers.customerUserName}} add new offer : {{offers.price}}
+      </div>
     </div>
   </div>
 </div>
