--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "font-awesome";
+@import "animate.css";
 .hovereffectblack:hover{
   font-weight:bold;
   font-size:medium;
