--- a/src/app/Pages/auctions-page/auctions-page.component.html
+++ b/src/app/Pages/auctions-page/auctions-page.component.html
@@ -9,11 +9,11 @@
           <h5 style="text-align: center">{{auction.name}}</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a routerLink="/auctionpage/{{auction.id}}" style="margin-left: 64px;align-items: center" class="btn btn-secondary" id="auctionPrice{{auction.id}}">{{auction.price | currency:"₺":false}} </a>
+          <button routerLink="/auctionpage/{{auction.id}}" style="margin-left: 64px;align-items: center" class="btn btn-secondary" id="auctionPrice{{auction.id}}" name="tryy" >{{auction.price | currency:"₺":false}} </button>
         </div>
       </div>
     </div>
   </div>
 </div>
-<button style="height: 20px;width: 20px;margin-left: 200px" id="buttondeneme2" (click)="startSocket()"></button>
+
 
