--- a/src/app/Pages/the-auction-page/the-auction-page.component.html
+++ b/src/app/Pages/the-auction-page/the-auction-page.component.html
@@ -36,20 +36,18 @@
 
       <h1>Offers</h1>
       <div style="width: 400px;margin-left: -50px">
-        <div *ngIf="accountService.loggedIn;else:GoLogin" class="input-group mb-3"
-        >
+        <div *ngIf="accountService.loggedIn;else:GoLogin" class="input-group mb-3">
           <input autocomplete="off" type="text" class="form-control" id="offerInput" placeholder="Write your offer"
                  aria-describedby="button-addon2">
-          <button class="btn btn-outline-dark" type="button" id="AddOfferButton" (click)="addOffer()">Give Offer
-          </button>
+          <button class="btn btn-outline-dark" type="button" id="AddOfferButton" (click)="addOffer(getPageUrl())">Give Offer</button>
         </div>
         <ng-template #GoLogin class="-align-right" >
           Do you want to give orders? Let
           <button class="btn btn-success" routerLink="/login">Login</button>
         </ng-template>
       </div>
-      <div class="animate__animated  animate__backInRight alert alert-dark " role="alert" style="margin-top: 15px" *ngFor="let offers of theOffersMade">
-        {{offers.customerUserName}} add new offer : {{offers.price}}
+      <div class="animate__animated  animate__backInRight alert alert-dark " role="alert" style="margin-top: 15px" *ngFor="let offer of offers">
+        {{offer.customerUserName}} add new offer : {{offer.price}}
       </div>
     </div>
   </div>
